--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "ankith/catalog-graphql",
     "description": "OOSP to appear on filter via url_key for the feature of Magento",
     "type": "magento2-module",
-    "version": "1.0.0",
+    "version": "1.0.1",
     "license": [
         "OSL-3.0",
         "AFL-3.0"
@@ -22,7 +22,9 @@
             "url": "https://repo.magento.com/"
         }
     ],
-    "require": { },
+    "require": {
+        "magento/framework": ">=102.0"
+    },
     "autoload": {
         "files": [
             "registration.php"
